<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/bottom_home" />
        <item
            android:id="@+id/nav_warning"
            android:icon="@drawable/ic_baseline_warning_24"
            android:title="@string/bottom_warning" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/nav_history" />
    </group>
    <item android:title="@string/bottom_account">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/icon_account_nav"
                android:title="@string/nav_account" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/icon_setting_nav"
                android:title="@string/nav_setting" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/icon_log_out_nav"
                android:title="@string/nav_log_out" />
        </menu>
    </item>
</menu>